chore: cleanup native static build + stray logs
Signed-off-by: Sam Gammon <sam@elide.ventures>